# quant

./: .env.production.example  .gitignore  ADVANCED_AI_SYSTEM.md  ADVANCED_ANALYTICS_API.md  ADVANCED_ANALYTICS_API_REFERENCE.md  ADVANCED_ANALYTICS_TEST_REPORT.md  ADVANCED_FEATURES_SUMMARY.md  AGENTS_PROGRESS_UPDATE.md  AI_PROVIDERS_INTEGRATION_GUIDE.md  API_DOCUMENTATION.md  API_KEYS_SECURITY_GUIDE.md  API_QUICK_START.md  API_SCHEMAS.md  BACKTESTING_INTEGRATION_COMPLETE.md  BACKTEST_QUICK_START.md  BUGFIX_CACHE_DECORATORS.md  CLAUDE.md  CODE_CLEANUP_COMPLETE.md  CODE_REVIEW_2026-02-24.md  CODE_REVIEW_FULL.md  CODE_REVIEW_INDEX.md  CODE_REVIEW_REPORT.md  CODE_REVIEW_SUMMARY.md  COMPLETE_DEPLOYMENT_SUMMARY_2026-02-14.md  COMPLETE_SESSION_SUMMARY_2026-02-24.md  COMPREHENSIVE_CODE_REVIEW_AND_TEST_REPORT.md  COMPREHENSIVE_PRODUCTION_REPORT.md  COMPREHENSIVE_TEST_REPORT.md  CONCURRENCY_FIX_SUMMARY.md  CONCURRENCY_OPTIMIZATION_REPORT.md  CONFIGURATION_GUIDE.md  CREDENTIALS_CHECKLIST.md  CYCLICAL_ANALYSIS_SUMMARY.md  DEBUG_REPORT.md  DEPLOYMENT_CHECKLIST.md  DEPLOYMENT_COMPLETE_SUMMARY.md  DEPLOYMENT_FIXES_2026-02-24.md  DEPLOYMENT_GUIDE.md  DEPLOYMENT_INDEX.md  DEPLOYMENT_QUICK_START.md  (+221 more)
quant/backend/: .env.development  .env.example  .env.free-tier.example  .env.production.example  CELERY_AUTOMATION.md  CELERY_CODE_REVIEW.md  CLI_USAGE.md  CUMULATIVE_TEST_SUMMARY.md  DATA_PIPELINE_GUIDE.md  Dockerfile  Dockerfile.prod  Dockerfile.production  FINAL_CODE_REVIEW_AND_ASSESSMENT.md  PHASE_2_COMPLETE_SUMMARY.md  PREMIUM_FEATURES_DOCUMENTATION.md  PRODUCTION_DEPLOYMENT.md  PROGRAMMATIC_DEPLOYMENT.md  QUICK_START_DATA_PIPELINE.md  RAILWAY_TOKEN_GUIDE.md  README.md  REMAINING_TODOS.md  SCRAPER_SETUP.md  SCRAPER_TESTING_REPORT.md  TASK_11_AUTOMATED_DATA_PIPELINE.md  TASK_11_VALIDATION_CHECKLIST.md  TASK_12_TEST_COVERAGE_PROGRESS.md  TESTING_BLOCKERS_AND_SOLUTIONS.md  TESTING_QUICK_REFERENCE.md  (+51 more)
(+2224 files in other folders)
