[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "quant-backend"
version = "0.1.0"
description = "FastAPI backend for Quant Analytics Platform"
requires-python = ">=3.11"
dependencies = [
    "fastapi[all]>=0.111.0",
    "uvicorn[standard]>=0.30.1",
    "sqlalchemy>=2.0.31",
    "alembic>=1.13.2",
    "pydantic>=2.8.2",
    "pydantic-settings>=2.3.4",
    "asyncpg>=0.29.0",
    "psycopg2-binary>=2.9.9",
    "redis>=5.0.7",
    "celery>=5.4.0",
    "httpx>=0.27.0",
    "beautifulsoup4>=4.12.3",
    "selenium>=4.22.0",
    "yfinance>=0.2.40",
    "pandas>=2.2.2",
    "numpy>=2.0.0",
    "python-jose[cryptography]>=3.3.0",
    "passlib[bcrypt]>=1.7.4",
    "python-multipart>=0.0.9",
    "supabase>=2.5.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2.2",
    "pytest-asyncio>=0.23.7",
    "pytest-cov>=5.0.0",
    "pytest-mock>=3.14.0",
    "black>=24.4.2",
    "ruff>=0.5.1",
    "mypy>=1.10.1",
    "ipython>=8.26.0",
]

[tool.black]
line-length = 100
target-version = ['py311']
include = '\\.pyi?$'

[tool.ruff]
line-length = 100
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "C",   # flake8-comprehensions
    "B",   # flake8-bugbear
    "UP",  # pyupgrade
]
ignore = [
    "E501",  # line too long (handled by black)
    "B008",  # do not perform function calls in argument defaults
    "C901",  # too complex
]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = "-ra -q --strict-markers --cov=app --cov-report=term-missing"
asyncio_mode = "auto"
